<resources>
    <string name="app_name">Stock Market Search</string>
    <string name="title_activity_stock_details">StockDetailsActivity</string>
    <string name="stock_search_title">Stock Name / Symbol</string>
    <string name="button_get_quote">Get Quote</string>
    <string name="button_clear">Clear</string>
    <string name="indicator_title">Indicators</string>
    <string name="action_settings">Settings</string>
    <string name="no_favorite_text">Mark the interesting stocks as favorite to track here.</string>
    <string name="news_header_text">Bloomberg Business News</string>
    <string name="news_api_endpoint">https://newsapi.org/v2/top-headlines?sources=bloomberg</string>
    <string name="news_api_key">da57446ef4064c0db71939b975000303</string>
    <string name="news_credit"><a href="https://newsapi.org/">Powered by News API</a></string>
    <string name="favorite_order_category">Sort By</string>
    <string name="favorite_order_type">Order</string>
    <string name="favorite_table_header">Favorites</string>
    <string name="current_details_header">CURRENT</string>
    <string name="historical_details_header">HISTORICAL</string>
    <string name="favorite_details_header">FAVORITES</string>
    <string name="news_general_details_header">FINANCIAL NEWS</string>
    <string name="news_details_header">NEWS</string>
    <string name="favorite_table_volume_header">Volume :</string>
    <string name="autorefresh">AutoRefresh</string>
    <string name="favorite_context_title">Remove from favorites?</string>
    <string-array name="indicator_array">
        <item>SMA</item>
        <item>EMA</item>
        <item>MACD</item>
        <item>RSI</item>
        <item>ADX</item>
        <item>CCI</item>
    </string-array>
    <string-array name="favorites_context_array">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    <string-array name="favorites_sort_types">
        <item>Order</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="favorites_sort_categories">
        <item>Sort By</item>
        <item>Default</item>
        <item>Symbol</item>
        <item>Price</item>
        <item>Change</item>
    </string-array>
</resources>
