<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/containerLayout"
    android:orientation="vertical"
    android:background="@color/backgroundGrey">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_search_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            android:padding="5dp"
            android:gravity="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.kalhan.stockmarkettracker.DelayAutoComplete
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/yellowTint"
            android:textCursorDrawable = "@drawable/color_cursor"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:popupBackground="@color/backgroundGrey"
            android:completionThreshold="1"
            />

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:paddingRight="15dp"
            android:layout_gravity="end"
            android:elevation="2dp"
            android:visibility="gone"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="#5B595D"
            android:layout_margin="5dp"
            android:textSize="14sp"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/get_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textColor="@android:color/white"
            android:background="#5B595D"
            android:textSize="14sp"
            android:text="@string/button_get_quote" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:text="@string/favorite_table_header"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="start"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/autorefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autorefresh"
            android:layout_marginStart="10dp"
            android:textColor="#ffffff"
            android:theme="@style/SCBSwitch"
            />
        <ImageView
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/refresh" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/spinner_sort_category" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/spinner_sort_type"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/no_favorite_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/no_favorite_text"
        android:gravity="center"
        />
    <ListView
        android:id="@+id/favorite_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:divider="#7c7777"
        android:dividerHeight="1dp"
        android:scrollbarSize="10dp"
        android:scrollbarThumbVertical="@drawable/custom_scroll_style"
        >
    </ListView>

</LinearLayout>